--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
     <% Object.values(product2).forEach((data) => { %>
         <p>product name: <%= data.name %></p>
         <p>product name: <%= data.price %></p>
-        <img src="<%= data.image %>">        
+        <img src="<%= data.image %>" alt="">     
         <hr>
     <% }) %> 
 </body>
